Fix ANDROID_HOME environment variable in notebook

--- a/Flutter_Manga_App_Builder.ipynb
+++ b/Flutter_Manga_App_Builder.ipynb
@@ -193,6 +193,11 @@
         "\n",
         "print(\"📦 Installing Flutter dependencies...\")\n",
         "\n",
+        "# Set environment variables\n",
+        "os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
+        "os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
+        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin:/content/android-sdk/platform-tools\"\n",
+        "\n",
         "# Change to project directory\n",
         "os.chdir('/content/flutter-manga-app')\n",
         "\n",
@@ -228,10 +233,20 @@
         "print(\"🔨 Building APK...\")\n",
         "print(\"⏳ Bu 10 daqiqa davom etadi, sabr qiling...\\n\")\n",
         "\n",
+        "# Set environment variables (MUHIM!)\n",
+        "os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
+        "os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
+        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin:/content/android-sdk/platform-tools\"\n",
+        "\n",
         "# Make sure we're in the right directory\n",
         "os.chdir('/content/flutter-manga-app')\n",
         "\n",
+        "# Verify Android SDK\n",
+        "print(\"Checking Android SDK...\")\n",
+        "!ls -la /content/android-sdk/platform-tools 2>/dev/null || echo \"⚠️ Platform tools not found\"\n",
+        "\n",
         "# Build APK\n",
+        "print(\"\\nStarting build...\\n\")\n",
         "!/content/flutter/bin/flutter build apk --release\n",
         "\n",
         "# Check if APK exists\n",
@@ -250,7 +265,8 @@
         "    print(\"❌ BUILD XATOLIK!\")\n",
         "    print(\"=\"*60)\n",
         "    print(\"Yuqoridagi xatolarni tekshiring\")\n",
-        "    print(\"Yoki bu cell'ni qayta ishga tushiring\")\n",
+        "    print(\"\\n💡 Yechim: Cell 3'ni qayta ishga tushiring (Android SDK)\")\n",
+        "    print(\"Keyin bu cell'ni qayta ishga tushiring\")\n",
         "    print(\"=\"*60)"
       ],
       "metadata": {
@@ -375,6 +391,11 @@
         "import os\n",
         "\n",
         "print(\"🔄 Qayta build qilish...\\n\")\n",
+        "\n",
+        "# Set environment variables\n",
+        "os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
+        "os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
+        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin:/content/android-sdk/platform-tools\"\n",
         "\n",
         "os.chdir('/content/flutter-manga-app')\n",
         "\n",
