Fix build errors: restore Android resources and improve code

--- a/Flutter_Manga_App_Builder.ipynb
+++ b/Flutter_Manga_App_Builder.ipynb
@@ -18,17 +18,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 📱 Flutter Manga Reader - APK Builder\n",
+        "# 📱 Flutter Manga Reader - Ultimate Builder\n",
         "\n",
-        "Bu notebook Flutter manga reader ilovasini Google Colab'da build qiladi.\n",
+        "Bu notebook orqali siz **Flutter Manga App** uchun APK faylni eng oson va ishonchli usulda tayyorlay olasiz.\n",
         "\n",
         "**Repository:** https://github.com/UzbekApis/flutter-manga-app\n",
         "\n",
         "---\n",
         "\n",
-        "## ⏱️ Jami vaqt: ~20 daqiqa\n",
+        "## 🚀 Qanday ishlatiladi?\n",
         "\n",
-        "Har bir cell'ni ketma-ket ishga tushiring (Shift+Enter)"
+        "1. Yuqoridagi menyudan **Runtime** -> **Run all** ni tanlang (yoki `Ctrl+F9`).\n",
+        "2. Taxminan **20 daqiqa** kuting.\n",
+        "3. APK fayl avtomatik ravishda yuklab olinadi.\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "header"
@@ -37,105 +41,86 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 📦 1. System Packages (5 daqiqa)\n",
+        "## 🛠️ 1. Muhitni Sozlash (Environment Setup)\n",
         "\n",
-        "Kerakli system packages'larni o'rnatish"
+        "Bu qadamda barcha kerakli dasturlar o'rnatiladi:\n",
+        "- System packages (Java, git, curl, unzip)\n",
+        "- Flutter SDK (Stable)\n",
+        "- Android SDK & Tools"
       ],
       "metadata": {
-        "id": "step1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"📦 Installing system packages...\")\n",
-        "!apt-get update -qq\n",
-        "!apt-get install -y -qq curl git unzip xz-utils zip libglu1-mesa openjdk-11-jdk\n",
-        "\n",
-        "print(\"\\n✅ System packages o'rnatildi!\")"
-      ],
-      "metadata": {
-        "id": "install_packages"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 📱 2. Flutter (3 daqiqa)\n",
-        "\n",
-        "Flutter SDK'ni o'rnatish"
-      ],
-      "metadata": {
-        "id": "step2"
+        "id": "step1_header"
       }
     },
     {
       "cell_type": "code",
       "source": [
         "import os\n",
+        "import sys\n",
         "\n",
-        "print(\"📱 Installing Flutter...\")\n",
+        "def run_step(step_name, command, check_path=None):\n",
+        "    print(f\"\\n🚀 {step_name}...\")\n",
+        "    result = os.system(command)\n",
+        "    if result != 0:\n",
+        "        print(f\"❌ {step_name} xatolik bilan tugadi!\")\n",
+        "        # Xatolik bo'lsa ham davom etishga harakat qilamiz, ba'zan apt-get xato berishi mumkin lekin ishlashi mumkin\n",
+        "    if check_path and not os.path.exists(check_path):\n",
+        "        print(f\"❌ {step_name}: {check_path} topilmadi!\")\n",
+        "        # Critical path yo'q bo'lsa to'xtatamiz\n",
+        "        if \"flutter\" in check_path or \"android\" in check_path:\n",
+        "             raise Exception(f\"Critical requirement missing: {check_path}\")\n",
+        "    print(f\"✅ {step_name} muvaffaqiyatli!\")\n",
         "\n",
+        "print(\"📦 Tizimni tayyorlash boshlandi...\")\n",
+        "\n",
+        "# 1. System packages\n",
+        "run_step(\n",
+        "    \"Tizim kutubxonalarini o'rnatish\",\n",
+        "    \"apt-get update -qq && apt-get install -y -qq curl git unzip xz-utils zip libglu1-mesa openjdk-11-jdk\"\n",
+        ")\n",
+        "\n",
+        "# 2. Flutter\n",
         "if not os.path.exists('/content/flutter'):\n",
-        "    !git clone https://github.com/flutter/flutter.git -b stable --depth 1\n",
-        "    print(\"Flutter yuklab olindi\")\n",
-        "else:\n",
-        "    print(\"Flutter allaqachon o'rnatilgan\")\n",
+        "    run_step(\n",
+        "        \"Flutter yuklash\",\n",
+        "        \"git clone https://github.com/flutter/flutter.git -b stable --depth 1\",\n",
+        "        \"/content/flutter/bin/flutter\"\n",
+        "    )\n",
         "\n",
-        "# Test\n",
-        "!/content/flutter/bin/flutter --version\n",
+        "# PATH sozlash\n",
+        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin\"\n",
         "\n",
-        "print(\"\\n✅ Flutter tayyor!\")"
-      ],
-      "metadata": {
-        "id": "install_flutter"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 🤖 3. Android SDK (3 daqiqa)\n",
-        "\n",
-        "Android SDK va build tools'larni o'rnatish"
-      ],
-      "metadata": {
-        "id": "step3"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "print(\"🤖 Installing Android SDK...\")\n",
-        "\n",
+        "# 3. Android SDK\n",
         "if not os.path.exists('/content/android-sdk'):\n",
-        "    # Download\n",
-        "    !wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip\n",
+        "    run_step(\n",
+        "        \"Android SDK yuklash\",\n",
+        "        \"wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip\"\n",
+        "    )\n",
+        "    run_step(\n",
+        "        \"Android SDK arxivdan chiqarish\",\n",
+        "        \"mkdir -p /content/android-sdk/cmdline-tools && unzip -q commandlinetools-linux-9477386_latest.zip -d /content/android-sdk/cmdline-tools && mv /content/android-sdk/cmdline-tools/cmdline-tools /content/android-sdk/cmdline-tools/latest\",\n",
+        "        \"/content/android-sdk/cmdline-tools/latest/bin/sdkmanager\"\n",
+        "    )\n",
         "    \n",
-        "    # Extract\n",
-        "    !mkdir -p /content/android-sdk/cmdline-tools\n",
-        "    !unzip -q commandlinetools-linux-9477386_latest.zip -d /content/android-sdk/cmdline-tools\n",
-        "    !mv /content/android-sdk/cmdline-tools/cmdline-tools /content/android-sdk/cmdline-tools/latest\n",
+        "    # Environment variables\n",
+        "    os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
+        "    os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
         "    \n",
-        "    # Install packages\n",
-        "    !/content/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=/content/android-sdk \"platform-tools\" \"platforms;android-33\" \"build-tools;33.0.2\"\n",
+        "    run_step(\n",
+        "        \"Android SDK paketlarini o'rnatish\",\n",
+        "        \"yes | /content/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=/content/android-sdk 'platform-tools' 'platforms;android-33' 'build-tools;33.0.2'\",\n",
+        "        \"/content/android-sdk/platform-tools/adb\"\n",
+        "    )\n",
         "    \n",
-        "    # Accept licenses\n",
-        "    !yes | /content/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=/content/android-sdk --licenses\n",
-        "    \n",
-        "    print(\"Android SDK o'rnatildi\")\n",
-        "else:\n",
-        "    print(\"Android SDK allaqachon o'rnatilgan\")\n",
+        "    run_step(\n",
+        "        \"Litsenziyalarni qabul qilish\",\n",
+        "        \"yes | /content/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=/content/android-sdk --licenses\"\n",
+        "    )\n",
         "\n",
-        "print(\"\\n✅ Android SDK tayyor!\")"
+        "print(\"\\n✨ Muhit to'liq tayyor!\")"
       ],
       "metadata": {
-        "id": "install_android"
+        "id": "setup_env"
       },
       "execution_count": null,
       "outputs": []
@@ -143,12 +128,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 📂 4. Loyiha yuklash (1 daqiqa)\n",
+        "## 📂 2. Loyihani Yuklash va Tayyorlash\n",
         "\n",
-        "GitHub'dan Flutter manga reader loyihasini clone qilish"
+        "GitHub'dan loyihani olamiz va kerakli kutubxonalarni o'rnatamiz."
       ],
       "metadata": {
-        "id": "step4"
+        "id": "step2_header"
       }
     },
     {
@@ -156,21 +141,30 @@
       "source": [
         "import os\n",
         "\n",
-        "print(\"📂 Cloning project from GitHub...\")\n",
-        "\n",
+        "# 4. Loyihani yuklash\n",
         "if not os.path.exists('/content/flutter-manga-app'):\n",
+        "    print(\"📂 Loyiha yuklanmoqda...\")\n",
         "    !git clone https://github.com/UzbekApis/flutter-manga-app.git\n",
-        "    print(\"Loyiha yuklab olindi\")\n",
         "else:\n",
-        "    print(\"Loyiha allaqachon mavjud\")\n",
+        "    print(\"📂 Loyiha allaqachon mavjud, yangilanmoqda...\")\n",
+        "    os.chdir('/content/flutter-manga-app')\n",
+        "    !git pull\n",
         "\n",
-        "# Check files\n",
-        "!ls -la /content/flutter-manga-app\n",
+        "# 5. Dependencies\n",
+        "print(\"📦 Dependencies o'rnatilmoqda...\")\n",
+        "os.chdir('/content/flutter-manga-app')\n",
         "\n",
-        "print(\"\\n✅ Loyiha tayyor!\")"
+        "# Environment variables qayta set qilish (har ehtimolga qarshi)\n",
+        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin\"\n",
+        "os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
+        "os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
+        "\n",
+        "!flutter pub get\n",
+        "\n",
+        "print(\"✅ Loyiha tayyor!\")"
       ],
       "metadata": {
-        "id": "clone_project"
+        "id": "setup_project"
       },
       "execution_count": null,
       "outputs": []
@@ -178,12 +172,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 📦 5. Dependencies (2 daqiqa)\n",
+        "## 🔨 3. APK Build Qilish\n",
         "\n",
-        "Flutter dependencies'larni o'rnatish"
+        "Eng muhim qism. Bu jarayon 5-10 daqiqa vaqt olishi mumkin."
       ],
       "metadata": {
-        "id": "step5"
+        "id": "step3_header"
       }
     },
     {
@@ -191,65 +185,15 @@
       "source": [
         "import os\n",
         "\n",
-        "print(\"📦 Installing Flutter dependencies...\")\n",
+        "print(\"🔨 APK Build jarayoni boshlandi...\")\n",
+        "print(\"⏳ Iltimos kuting, bu biroz vaqt oladi...\")\n",
         "\n",
-        "# Set environment variables\n",
-        "os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
-        "os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
-        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin:/content/android-sdk/platform-tools\"\n",
-        "\n",
-        "# Change to project directory\n",
         "os.chdir('/content/flutter-manga-app')\n",
         "\n",
-        "# Get dependencies\n",
-        "!/content/flutter/bin/flutter pub get\n",
+        "# Build\n",
+        "!flutter build apk --release\n",
         "\n",
-        "print(\"\\n✅ Dependencies o'rnatildi!\")"
-      ],
-      "metadata": {
-        "id": "install_deps"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 🔨 6. Build APK (10 daqiqa)\n",
-        "\n",
-        "Release APK build qilish\n",
-        "\n",
-        "⏳ Bu qadam eng uzoq davom etadi (~10 daqiqa)"
-      ],
-      "metadata": {
-        "id": "step6"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "print(\"🔨 Building APK...\")\n",
-        "print(\"⏳ Bu 10 daqiqa davom etadi, sabr qiling...\\n\")\n",
-        "\n",
-        "# Set environment variables (MUHIM!)\n",
-        "os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
-        "os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
-        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin:/content/android-sdk/platform-tools\"\n",
-        "\n",
-        "# Make sure we're in the right directory\n",
-        "os.chdir('/content/flutter-manga-app')\n",
-        "\n",
-        "# Verify Android SDK\n",
-        "print(\"Checking Android SDK...\")\n",
-        "!ls -la /content/android-sdk/platform-tools 2>/dev/null || echo \"⚠️ Platform tools not found\"\n",
-        "\n",
-        "# Build APK\n",
-        "print(\"\\nStarting build...\\n\")\n",
-        "!/content/flutter/bin/flutter build apk --release\n",
-        "\n",
-        "# Check if APK exists\n",
+        "# Check result\n",
         "apk_path = '/content/flutter-manga-app/build/app/outputs/flutter-apk/app-release.apk'\n",
         "\n",
         "if os.path.exists(apk_path):\n",
@@ -258,16 +202,8 @@
         "    print(\"✅ BUILD MUVAFFAQIYATLI!\")\n",
         "    print(\"=\"*60)\n",
         "    print(f\"📱 APK hajmi: {size_mb:.2f} MB\")\n",
-        "    print(f\"📍 Joylashuv: {apk_path}\")\n",
-        "    print(\"=\"*60)\n",
         "else:\n",
-        "    print(\"\\n\" + \"=\"*60)\n",
-        "    print(\"❌ BUILD XATOLIK!\")\n",
-        "    print(\"=\"*60)\n",
-        "    print(\"Yuqoridagi xatolarni tekshiring\")\n",
-        "    print(\"\\n💡 Yechim: Cell 3'ni qayta ishga tushiring (Android SDK)\")\n",
-        "    print(\"Keyin bu cell'ni qayta ishga tushiring\")\n",
-        "    print(\"=\"*60)"
+        "    print(\"❌ Build xatolik bilan tugadi. Yuqoridagi loglarni tekshiring.\")"
       ],
       "metadata": {
         "id": "build_apk"
@@ -278,12 +214,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ⬇️ 7. APK yuklab olish\n",
+        "## ⬇️ 4. Yuklab Olish\n",
         "\n",
-        "Tayyor APK'ni yuklab olish"
+        "Agar build muvaffaqiyatli bo'lsa, APK fayl avtomatik yuklab olinadi."
       ],
       "metadata": {
-        "id": "step7"
+        "id": "step4_header"
       }
     },
     {
@@ -295,162 +231,16 @@
         "apk_path = '/content/flutter-manga-app/build/app/outputs/flutter-apk/app-release.apk'\n",
         "\n",
         "if os.path.exists(apk_path):\n",
-        "    print(\"⬇️ Yuklab olish boshlandi...\")\n",
+        "    print(\"⬇️ APK yuklab olinmoqda...\")\n",
         "    files.download(apk_path)\n",
-        "    print(\"\\n✅ APK yuklab olindi!\")\n",
-        "    print(\"\\n📱 Keyingi qadamlar:\")\n",
-        "    print(\"1. APK'ni telefonga o'tkazing\")\n",
-        "    print(\"2. Settings → Security → Unknown sources ✅\")\n",
-        "    print(\"3. APK'ni bosing va o'rnating\")\n",
-        "    print(\"4. Manga Reader'ni oching va manga qidiring! 🎉\")\n",
         "else:\n",
-        "    print(\"❌ APK topilmadi!\")\n",
-        "    print(\"Cell 6'ni qayta ishga tushiring\")"
+        "    print(\"❌ Yuklab olish uchun APK fayl topilmadi.\")"
       ],
       "metadata": {
         "id": "download_apk"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "---\n",
-        "\n",
-        "## 🐛 Xatoliklarni hal qilish\n",
-        "\n",
-        "Agar xatolik bo'lsa, quyidagi cell'ni ishga tushiring:"
-      ],
-      "metadata": {
-        "id": "troubleshoot"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "print(\"🔍 Diagnostika...\\n\")\n",
-        "\n",
-        "# Flutter\n",
-        "print(\"1. Flutter:\")\n",
-        "if os.path.exists('/content/flutter/bin/flutter'):\n",
-        "    print(\"   ✅ Flutter o'rnatilgan\")\n",
-        "    !/content/flutter/bin/flutter --version\n",
-        "else:\n",
-        "    print(\"   ❌ Flutter topilmadi - Cell 2'ni qayta ishga tushiring\")\n",
-        "\n",
-        "# Android SDK\n",
-        "print(\"\\n2. Android SDK:\")\n",
-        "if os.path.exists('/content/android-sdk'):\n",
-        "    print(\"   ✅ Android SDK o'rnatilgan\")\n",
-        "else:\n",
-        "    print(\"   ❌ Android SDK topilmadi - Cell 3'ni qayta ishga tushiring\")\n",
-        "\n",
-        "# Project\n",
-        "print(\"\\n3. Loyiha:\")\n",
-        "if os.path.exists('/content/flutter-manga-app'):\n",
-        "    print(\"   ✅ Loyiha mavjud\")\n",
-        "else:\n",
-        "    print(\"   ❌ Loyiha topilmadi - Cell 4'ni qayta ishga tushiring\")\n",
-        "\n",
-        "# APK\n",
-        "print(\"\\n4. APK:\")\n",
-        "apk_path = '/content/flutter-manga-app/build/app/outputs/flutter-apk/app-release.apk'\n",
-        "if os.path.exists(apk_path):\n",
-        "    size_mb = os.path.getsize(apk_path) / 1024 / 1024\n",
-        "    print(f\"   ✅ APK tayyor ({size_mb:.2f} MB)\")\n",
-        "else:\n",
-        "    print(\"   ❌ APK topilmadi - Cell 6'ni qayta ishga tushiring\")\n",
-        "\n",
-        "print(\"\\n\" + \"=\"*60)"
-      ],
-      "metadata": {
-        "id": "diagnostics"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "---\n",
-        "\n",
-        "## 🔄 Qayta build qilish\n",
-        "\n",
-        "Agar o'zgarish kiritgan bo'lsangiz va qayta build qilmoqchi bo'lsangiz:"
-      ],
-      "metadata": {
-        "id": "rebuild"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "print(\"🔄 Qayta build qilish...\\n\")\n",
-        "\n",
-        "# Set environment variables\n",
-        "os.environ['ANDROID_HOME'] = '/content/android-sdk'\n",
-        "os.environ['ANDROID_SDK_ROOT'] = '/content/android-sdk'\n",
-        "os.environ['PATH'] = f\"{os.environ['PATH']}:/content/flutter/bin:/content/android-sdk/platform-tools\"\n",
-        "\n",
-        "os.chdir('/content/flutter-manga-app')\n",
-        "\n",
-        "# Clean\n",
-        "print(\"🧹 Cleaning...\")\n",
-        "!/content/flutter/bin/flutter clean\n",
-        "\n",
-        "# Get dependencies\n",
-        "print(\"\\n📦 Getting dependencies...\")\n",
-        "!/content/flutter/bin/flutter pub get\n",
-        "\n",
-        "# Build\n",
-        "print(\"\\n🔨 Building...\")\n",
-        "!/content/flutter/bin/flutter build apk --release\n",
-        "\n",
-        "# Check\n",
-        "apk_path = '/content/flutter-manga-app/build/app/outputs/flutter-apk/app-release.apk'\n",
-        "if os.path.exists(apk_path):\n",
-        "    size_mb = os.path.getsize(apk_path) / 1024 / 1024\n",
-        "    print(f\"\\n✅ Qayta build muvaffaqiyatli! ({size_mb:.2f} MB)\")\n",
-        "else:\n",
-        "    print(\"\\n❌ Build xatolik!\")"
-      ],
-      "metadata": {
-        "id": "rebuild_apk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "---\n",
-        "\n",
-        "## 📚 Qo'shimcha ma'lumot\n",
-        "\n",
-        "- **Repository:** https://github.com/UzbekApis/flutter-manga-app\n",
-        "- **Issues:** https://github.com/UzbekApis/flutter-manga-app/issues\n",
-        "- **License:** MIT\n",
-        "\n",
-        "### Xususiyatlar:\n",
-        "- 🔍 Manga qidirish\n",
-        "- 📖 Online o'qish\n",
-        "- 💾 Offline o'qish (yuklab olish)\n",
-        "- 📜 Vertikal scroll\n",
-        "- 🖼️ Auto-fit rasmlar\n",
-        "- ⚡ Cache\n",
-        "\n",
-        "---\n",
-        "\n",
-        "**Made with ❤️ by UzbekApis**"
-      ],
-      "metadata": {
-        "id": "footer"
-      }
     }
   ]
 }
