Fix Colab build: add cmake/ninja and update compileSdk

--- a/Flutter_Manga_App_Builder.ipynb
+++ b/Flutter_Manga_App_Builder.ipynb
@@ -44,7 +44,7 @@
         "## 🛠️ 1. Muhitni Sozlash (Environment Setup)\n",
         "\n",
         "Bu qadamda barcha kerakli dasturlar o'rnatiladi:\n",
-        "- System packages (Java, git, curl, unzip)\n",
+        "- System packages (Java, git, curl, unzip, cmake, ninja)\n",
         "- Flutter SDK (Stable)\n",
         "- Android SDK & Tools"
       ],
@@ -76,7 +76,7 @@
         "# 1. System packages\n",
         "run_step(\n",
         "    \"Tizim kutubxonalarini o'rnatish\",\n",
-        "    \"apt-get update -qq && apt-get install -y -qq curl git unzip xz-utils zip libglu1-mesa openjdk-11-jdk\"\n",
+        "    \"apt-get update -qq && apt-get install -y -qq curl git unzip xz-utils zip libglu1-mesa openjdk-11-jdk cmake ninja-build\"\n",
         ")\n",
         "\n",
         "# 2. Flutter\n",
